// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddFundsSourcePicker component renders default options 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
}

.c1 {
  font-size: 14px;
}

<div
  className="c0"
>
  <div
    className="c1 css-b62m3t-container"
    data-cy="select"
    id="sourcePicker"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-sourcePicker-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-13ncb8r-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-319lph-ValueContainer"
      >
        <div
          className=" css-14el2xx-placeholder"
          id="react-select-sourcePicker-placeholder"
        >
          Search for Users or Organizations
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-sourcePicker-listbox"
          aria-describedby="react-select-sourcePicker-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-owns="react-select-sourcePicker-listbox"
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="sourcePicker"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-1xjgjl1-IndicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            height={16}
            version="1.1"
            viewBox="10 10 30 30"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Search
            </title>
            <path
              d="M28.5404814,30.1903972 C26.7995948,31.5736628 24.5962981,32.4 22.2,32.4 C16.5666956,32.4 12,27.8333044 12,22.2 C12,16.5666956 16.5666956,12 22.2,12 C27.8333044,12 32.4,16.5666956 32.4,22.2 C32.4,24.5962981 31.5736628,26.7995948 30.1903972,28.5404814 L35.6582912,34.0083754 C36.1139029,34.4639871 36.1139029,35.2026796 35.6582912,35.6582912 C35.2026796,36.1139029 34.4639871,36.1139029 34.0083754,35.6582912 L28.5404814,30.1903972 Z M22.2,30 C26.507821,30 30,26.507821 30,22.2 C30,17.892179 26.507821,14.4 22.2,14.4 C17.892179,14.4 14.4,17.892179 14.4,22.2 C14.4,26.507821 17.892179,30 22.2,30 Z"
              fill="#aaaaaa"
              fillRule="nonzero"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddFundsSourcePicker component renders fromCollectives by type in optgroup 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
}

.c1 {
  font-size: 14px;
}

<div
  className="c0"
>
  <div
    className="c1 css-b62m3t-container"
    data-cy="select"
    id="sourcePicker"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-sourcePicker-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-13ncb8r-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-319lph-ValueContainer"
      >
        <div
          className=" css-14el2xx-placeholder"
          id="react-select-sourcePicker-placeholder"
        >
          Search for Users or Organizations
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-sourcePicker-listbox"
          aria-describedby="react-select-sourcePicker-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-owns="react-select-sourcePicker-listbox"
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="sourcePicker"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-1xjgjl1-IndicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            height={16}
            version="1.1"
            viewBox="10 10 30 30"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Search
            </title>
            <path
              d="M28.5404814,30.1903972 C26.7995948,31.5736628 24.5962981,32.4 22.2,32.4 C16.5666956,32.4 12,27.8333044 12,22.2 C12,16.5666956 16.5666956,12 22.2,12 C27.8333044,12 32.4,16.5666956 32.4,22.2 C32.4,24.5962981 31.5736628,26.7995948 30.1903972,28.5404814 L35.6582912,34.0083754 C36.1139029,34.4639871 36.1139029,35.2026796 35.6582912,35.6582912 C35.2026796,36.1139029 34.4639871,36.1139029 34.0083754,35.6582912 L28.5404814,30.1903972 Z M22.2,30 C26.507821,30 30,26.507821 30,22.2 C30,17.892179 26.507821,14.4 22.2,14.4 C17.892179,14.4 14.4,17.892179 14.4,22.2 C14.4,26.507821 17.892179,30 22.2,30 Z"
              fill="#aaaaaa"
              fillRule="nonzero"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddFundsSourcePicker component renders host name as first option 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
}

.c1 {
  font-size: 14px;
}

<div
  className="c0"
>
  <div
    className="c1 css-b62m3t-container"
    data-cy="select"
    id="sourcePicker"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-sourcePicker-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-13ncb8r-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-319lph-ValueContainer"
      >
        <div
          className=" css-14el2xx-placeholder"
          id="react-select-sourcePicker-placeholder"
        >
          Search for Users or Organizations
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-sourcePicker-listbox"
          aria-describedby="react-select-sourcePicker-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-owns="react-select-sourcePicker-listbox"
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="sourcePicker"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-1xjgjl1-IndicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            height={16}
            version="1.1"
            viewBox="10 10 30 30"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Search
            </title>
            <path
              d="M28.5404814,30.1903972 C26.7995948,31.5736628 24.5962981,32.4 22.2,32.4 C16.5666956,32.4 12,27.8333044 12,22.2 C12,16.5666956 16.5666956,12 22.2,12 C27.8333044,12 32.4,16.5666956 32.4,22.2 C32.4,24.5962981 31.5736628,26.7995948 30.1903972,28.5404814 L35.6582912,34.0083754 C36.1139029,34.4639871 36.1139029,35.2026796 35.6582912,35.6582912 C35.2026796,36.1139029 34.4639871,36.1139029 34.0083754,35.6582912 L28.5404814,30.1903972 Z M22.2,30 C26.507821,30 30,26.507821 30,22.2 C30,17.892179 26.507821,14.4 22.2,14.4 C17.892179,14.4 14.4,17.892179 14.4,22.2 C14.4,26.507821 17.892179,30 22.2,30 Z"
              fill="#aaaaaa"
              fillRule="nonzero"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddFundsSourcePicker component renders loading state 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
}

.c1 {
  font-size: 14px;
}

<div
  className="c0"
>
  <div
    className="c1 css-b62m3t-container"
    data-cy="select"
    id="sourcePicker"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-sourcePicker-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-13ncb8r-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-319lph-ValueContainer"
      >
        <div
          className=" css-14el2xx-placeholder"
          id="react-select-sourcePicker-placeholder"
        >
          Search for Users or Organizations
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-sourcePicker-listbox"
          aria-describedby="react-select-sourcePicker-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-owns="react-select-sourcePicker-listbox"
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="sourcePicker"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-1xjgjl1-IndicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            height={16}
            version="1.1"
            viewBox="10 10 30 30"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Search
            </title>
            <path
              d="M28.5404814,30.1903972 C26.7995948,31.5736628 24.5962981,32.4 22.2,32.4 C16.5666956,32.4 12,27.8333044 12,22.2 C12,16.5666956 16.5666956,12 22.2,12 C27.8333044,12 32.4,16.5666956 32.4,22.2 C32.4,24.5962981 31.5736628,26.7995948 30.1903972,28.5404814 L35.6582912,34.0083754 C36.1139029,34.4639871 36.1139029,35.2026796 35.6582912,35.6582912 C35.2026796,36.1139029 34.4639871,36.1139029 34.0083754,35.6582912 L28.5404814,30.1903972 Z M22.2,30 C26.507821,30 30,26.507821 30,22.2 C30,17.892179 26.507821,14.4 22.2,14.4 C17.892179,14.4 14.4,17.892179 14.4,22.2 C14.4,26.507821 17.892179,30 22.2,30 Z"
              fill="#aaaaaa"
              fillRule="nonzero"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddFundsSourcePickerForUser component render host options 1`] = `
.c0 {
  font-size: 14px;
}

<div>
  <div
    className="c0 css-b62m3t-container"
    data-cy="select"
    id="sourcePicker"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-sourcePicker-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-13ncb8r-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-319lph-ValueContainer"
      >
        <div
          className=" css-14el2xx-placeholder"
          id="react-select-sourcePicker-placeholder"
        >
          Select
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-sourcePicker-listbox"
          aria-describedby="react-select-sourcePicker-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-owns="react-select-sourcePicker-listbox"
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="sourcePicker"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-1xjgjl1-IndicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-tj5bde-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddFundsSourcePickerForUser component renders default options 1`] = `
.c0 {
  font-size: 14px;
}

<div>
  <div
    className="c0 css-b62m3t-container"
    data-cy="select"
    id="sourcePicker"
    onKeyDown={[Function]}
  >
    <span
      className="css-1f43avz-a11yText-A11yText"
      id="react-select-sourcePicker-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="css-1f43avz-a11yText-A11yText"
    />
    <div
      className=" css-13ncb8r-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-319lph-ValueContainer"
      >
        <div
          className=" css-14el2xx-placeholder"
          id="react-select-sourcePicker-placeholder"
        >
          Select
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-sourcePicker-listbox"
          aria-describedby="react-select-sourcePicker-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-owns="react-select-sourcePicker-listbox"
          aria-readonly={true}
          className="css-mohuvp-dummyInput-DummyInput"
          disabled={false}
          id="sourcePicker"
          inputMode="none"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          tabIndex={0}
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-1xjgjl1-IndicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-tj5bde-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
